# data-science-project-template

./: README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: .gitignore
docs/source/: conf.py  index.rst
notebooks/: 01_explore_data.ipynb  02_spline_modelling.ipynb
src/ds_project/: spline_model.py  utils.py
