[project]
authors = [{name = "l-gorman", email = "leo.gorman@bristol.ac.uk"}]
dependencies = []
name = "structuring_ds_project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
structuring_ds_project = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.3,<3.14"
pymc = ">=5.22.0,<6"
pandas = ">=2.2.3,<3"
arviz = ">=0.21.0,<0.22"
numpy = ">=2.2.5,<3"

[tool.pixi.feature.dev-feat.dependencies]
pytest = "*"
black = "*"
pylint = "*"
sphinx = ">=8.2.3,<9"

[tool.pixi.feature.dev-feat.tasks]
test = "pytest"
lint = "pylint"
format = "black"
init-docs = "cd docs && sphinx-quickstart"
build-docs = "cd docs && make html"

[tool.pixi.environments]
dev-env = ["dev-feat"]
